# pangraph

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .vercelignore  01_build.ipynb  02_generate_examples.ipynb  03_align_minimap.ipynb  04_minimizers_mash.ipynb  05_neighbor_joining.ipynb  06_energy.ipynb  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Manifest.toml  Pipfile  Project.toml  README.md  Snakefile  build.jl  compile.jl  december2019.py  docker-dev  explore.py  index.html  main.py  metagather  output.json  precompile.jl  pyproject.toml  requirements.txt  rust-toolchain.toml  rustfmt.toml  scratch.py  search_index.js  (+3 more)
.cargo/: config.toml
.github/workflows/: build.yml  builder-docker-image.yml  cli.yml  docs.yml  pypangraph.yml  python-package.yml
cli/export/: index.html
cli/generate/: index.html
cli/marginalize/: index.html
cli/polish/: index.html
cli/version/: index.html
cmd/: annotategraph  cluster  compare  disttonwk  endrepairaln  endrepairegs  env  filterfasta  gatherfastas  gatherhits  map  metagather  selfmap  translate
data/: example-rev.fa  example.fa  example.gbk  example.gff  flu-h1.fa  flu-h3.fa  flu.fa  ges-1.fa  mpox.fa  sc2.fa  smol_01_ref.fa  test_graph.json
dev/: dev  publish-docker  publish-github  release  release-docs  release-pypangraph  run-smoke-tests
dev/building-docker/: index.html
dev/building-documentation/: index.html
dev/cross/: build
dev/design/: annotate-implementation-notes.md  annotate.md
dev/docker/: cross-linux.dockerfile  native.dockerfile  prod-debian.dockerfile  python  run
dev/releasing/: index.html
docker/: cross-split  dev  docker-dev.dockerfile  prettytest
docker/files/: start-jupyter
docs/: .prettierrc  Makefile  README.md  bun.lockb  deploy  docusaurus.config.ts  generate-reference-docs  make.jl  package.json
docs/dev/: buiding-docker.md  building-documentation.md  developer.guide.md  docker_test.sh  releasing.md
docs/docs/: glossary.md  index.md  reference.md
docs/infra/: serve-index-html-for-directories.js  serve-index-html-for-directories.test.js
docs/other/: release-instructions.md
docs/paper/: cite.bib  draft.tex
docs/src/: custom.css  index.md
docs/user/: glossary.md  index.md
example_datasets/: smol_01.fa
lib/align/: index.html
lib/block/: index.html
lib/edge/: index.html
lib/gfa/: index.html
lib/graph/: index.html
lib/mash/: index.html
lib/minimap/: index.html
lib/mmseqs/: index.html
lib/node/: index.html
lib/pangraph/: index.html
lib/path/: index.html
lib/simulate/: index.html
lib/utility/: index.html
notebooks/: classes.md  dump.py  minimap.ipynb  split_matches.ipynb
notebooks/algorithm_overview/: graph_merging.py  pangraph_classes.py
notebooks/block_operations/: block_operations.ipynb  pangraph_classes.py
notebooks/circularize/: circularize.py  merge_blocks.py  test_circularize.py  test_merge_blocks.py  utils.py
notebooks/export/: circularize_utils.py  export_block_consensus.py  export_block_sequences.py  export_blocks.py  export_core_aln.py  export_docs.md  export_gfa.py  fasta_utils.py  test_export.py  test_graph.json  utils.py
notebooks/minimap/: genrate_seqs.py
notebooks/reconsensus/: reconsensus.py  remove_nodes.py  test_reconsensus.py  test_remove_nodes.py  utils.py
notebooks/reweave/: classes.py  functions.py  intervals_utils.py  merge.py  reweave.ipynb  reweave_utils.py  slice_utils.py  test_intervals.py  test_slice.py  tests.py  utils.py
notebooks/simplify/: circularize_utils.py  simplify.py  test_simplify.py  utils.py
notebooks/split_and_filter_matches/: filter_matches.ipynb  (+1 more)
pangraph/: __init__.py  __main__.py  block.py  build.py  cluster.py  generate.py  graph.py  sequence.py  serialize.py  simulation.py  tree.py  utils.py  version.py
py/: block.py  generate.py  graph.py  kmers.py  main.py  suffix.py  utils.py
pypangraph/: __init__.py  biopython_utils.py  block_branching.py  blockpairs_analysis.py  class_alignments.py  class_block.py  class_graph.py  class_node.py  class_path.py  genomewise_sharecorrelations.py  indexed_collection.py  logger.py  pangraph_alignments.py  pangraph_interface.py  pangraph_locator.py  pangraph_projector.py  pangraph_utils.py  pangraph_visualize.py  pangraph_wrapper.py  panx_corepairs_analysis.py  parse_panx.py  visualization_projection.py
script/: Manifest.toml  Project.toml  README.md  Snakefile  accuracy.jl  ancestors.jl  assay-alignment.jl  benchmark  extract-gene  gbk-to-fa  make-accuracy  make-accuracy.jl  make-comparison  munkres.jl  panx-to-pangraph  panx-to-pangraph.jl  pick_projection_strain_sets.py  pick_strain_sets.py  plot-accuracy-comparison.jl  plot-accuracy.jl  plot-benchmark.jl  plot-comparison.jl  plot-panx-compare.jl  plot-util.jl  rules.mk  snakefile_accuracy  snakefile_panx
scripts/: assay_graph.py  assay_junctions.py  assess_algo.py  block.py  cluster_distmatrix.py  cluster_paf.py  docker_build_checksum.sh  entrez.py  figure1.py  filter_plasmids.py  gather_hits.py  gather_seqs.py  graph.py  graph_matrix.py  interval.py  kmer_tree.py  make_clusters.py  make_distmatrix.py  make_graph.py  parse_log.py  play.py  publish_docker  release  self_maps.py  simulate.py  sparsity.py  split_fasta.py  suffix.py  update_cli_reference_docs  util.py
search/: index.html
src/: PanGraph.jl  align.jl  args.jl  block.jl  build.jl  cmd.jl  counter.jl  edge.jl  export.jl  fifo.jl  generate.jl  gfa.jl  graph.jl  help.jl  interval.jl  junction.jl  marginalize.jl  mash.jl  minimap.jl  mmseqs.jl  node.jl  panX.jl  path.jl  polish.jl  pool.jl  simulate.jl  util.jl  version.jl  wfmash.jl
test/: test_msu.py
tests/: run-cli-tests.sh  run-smoke-tests  test-linux-distros  test_alignments.py  test_block_aln.py  test_graph.py  test_load_graph.py  test_msu.py
tools/: extract_release_notes.py  release.sh  release_checks.py
web/: .browserslistrc  .editorconfig  .env.example  .env.vercel  .eslintignore  .eslintrc.cjs  .gitignore  next.config.mjs  package.json  postcss.config.json  tsconfig.json  tsconfig.ts-node.json
(+212 files in other folders)
